# bsb

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  bsb-fields.csv  build.rs
bsb-codec/: Cargo.toml  README.md  bsb-fields.csv  build.rs
bsb-codec/src/: error.rs  field.rs  field_value.rs  lib.rs  testcases.rs  typed_value.rs  value.rs
bsb-parser/: Cargo.toml  README.md
bsb-parser/src/: lib.rs  parser.rs  serializer.rs
example/: Cargo.toml
example/src/: main.rs
src/: datatypes.rs  error.rs  field.rs  field_value.rs  frame.rs  lib.rs  named_value.rs  testcases.rs  typed_value.rs  value.rs
src/frame/: parser.rs  serializer.rs
